# packages/ecommerce-server/public/swagger.json
@@ -765,6 +765,30 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"DGLResponse_Datasource-Array_": {
+				"properties": {
+					"data": {
+						"items": {
+							"$ref": "#/components/schemas/Datasource"
+						},
+						"type": "array"
+					},
+					"status": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"data",
+					"status",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -908,7 +932,7 @@
 				"parameters": [
 					{
 						"in": "header",
-						"name": "apiKey",
+						"name": "api-key",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -925,9 +949,7 @@
 						}
 					}
 				}
-			}
-		},
-		"/dashboard/user/keys": {
+			},
 			"get": {
 				"operationId": "GetUserDatasources",
 				"responses": {
@@ -936,7 +958,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/DGLResponse_User_"
+									"$ref": "#/components/schemas/DGLResponse_Datasource-Array_"
 								}
 							}
 						}
@@ -949,7 +971,7 @@
 				"parameters": [
 					{
 						"in": "header",
-						"name": "apiKey",
+						"name": "api-key",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -957,6 +979,45 @@
 					},
 					{
 						"in": "query",
+						"name": "datasourceId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/dashboard/user/datasource/{datasourceId}": {
+			"get": {
+				"operationId": "GetUserDatasource",
+				"responses": {
+					"200": {
+						"description": "User",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DGLResponse_Datasource_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "header",
+						"name": "api-key",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "path",
 						"name": "datasourceId",
 						"required": true,
 						"schema": {
